# cv_filter_spot

./: .gitignore  CMakeLists.txt  build.sh  configure.sh  run.sh
python/: filter_tiny.py  filter_too_dark_bright_spot.py
src/: Main.cpp  Math.cpp  Math.h
